API | Client | List categories with prices
- List all request categories with subs and cost
- List delivery to home fees
