# app/Http/Controllers/Api/CategoryController.php
@@ -1,0 +1,55 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Api\ApiBaseController;
+use Illuminate\Http\Request;
+use App\Category;
+use App\Setting;
+
+/**
+ * Handle category operations
+ * @author Ahmad Gamal <eng.asgamal@gmail.com>
+ */
+class CategoryController extends ApiBaseController {
+
+    /**
+     * @SWG\Get(
+     *     path="/api/auth/category/list",
+     *     summary="List request categories",
+     *     tags={"Category"},
+     *     produces={"application/json"},
+     *     @SWG\Parameter(
+     *          in="header", name="Authorization", description="Logged in User access token", required=true, type="string",
+     *      ),
+     *     @SWG\Response(response="405",description="Invalid input"),
+     *     @SWG\SecurityScheme(
+     *         securityDefinition="X-Api-Token",
+     *         type="apiKey",
+     *         in="header",
+     *         name="X-Api-Token"
+     *    ),
+     * )
+     */
+    public function listCategories(Request $request) {
+        $parentCategories = Category::whereParent(null)->get();
+        $responses = new \stdClass();
+        $fees = Setting::where('setting', 'DELIVER_REQUEST_TO_HOME')->first();
+        $responses->deliverToHomeFees = $fees ? $fees->value: 0;
+        $responses->categories = $this->prepareCategoriesWithSubs($parentCategories);
+        return $this->getSuccessJsonResponse($responses);
+    }
+    
+    private function prepareCategoriesWithSubs($parentCategories) {      
+        $categories = [];
+        foreach ($parentCategories as $category) {
+            $categories[] = [
+                'name' => $category->getNameLocal(),
+                'cost' => $category->cost,
+                'hasSubs' => $category->leave ? 0 : 1,
+                'subs' => $category->leave ? null : $this->prepareCategoriesWithSubs($category->subCategories()),
+            ];
+        }
+        return $categories;
+    }
+}
